--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
+    "next": "13.5.6",
+    "prettier": "^3.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-redux": "^8.1.3",
+    "sass": "^1.69.4"
   }
 }
